some more cleanup on pullrequest + release notes update
+review REVIEW-5170